src/objects/MC_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSharepoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSharepoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Full Name of the Topic Owner</description>
        <formula>Owner:User.Shortened_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopicId__c</fullName>
        <label>TopicId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wistia_Hash__c</fullName>
        <description>Wistia Video Hash Id</description>
        <label>Wistia Hash</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MC Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TopicId__c</columns>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sharepoint</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TopicId__c</columns>
        <columns>IsSharepoint__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IsSharepoint__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sharepoint</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>MC Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Topics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>